<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFragSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_top_down"
        android:clickable="true"
        android:focusable="true"
        tools:context=".presentation.search.SearchFragment"
        android:contentDescription="@null">

        <LinearLayout
            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:fontFamily="@font/notable"
                android:gravity="center"
                android:text="@string/wnews"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="bottom"
                android:layout_marginStart="3dp"
                android:layout_marginBottom="9.5dp"
                android:fontFamily="@font/notable"
                android:text="@string/wnewssearch"
                android:textColor="@color/white"
                android:textSize="6sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/imgFragmentSearch"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"

            android:hint="@string/enterRequest"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:counterTextColor="@color/white"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="0dp"

            app:prefixTextColor="@color/white"
            app:placeholderTextColor="@color/white"
            app:suffixTextColor="@color/white"
            app:boxStrokeErrorColor="@color/white"
            android:outlineSpotShadowColor="@color/white"
            android:outlineAmbientShadowColor="@color/white"
            app:errorTextColor="@color/white"
            app:endIconMode="clear_text"
            app:endIconTint="@color/white"
            app:counterOverflowTextColor="@color/white"
            app:counterMaxLength="50"
            app:helperTextTextColor="@color/white"
            app:startIconTint="@color/white"

            app:endIconTintMode="multiply"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:shadowColor="@color/white"
                android:outlineAmbientShadowColor="@color/white"
                android:outlineSpotShadowColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorLink="@color/white"
                android:backgroundTint="@color/white"
                android:maxLength="50"
                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" />


        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgFragmentSearch"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_search"
            app:layout_constraintLeft_toRightOf="@id/textInputLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
